[package]
name       = "smirc"
version    = "0.1.0"
edition    = "2021"
license    = "0BSD"
repository = "https://github.com/museun/smirc"

[dependencies]
anyhow          = "1.0.66"
eframe          = { version = "0.19.0", features = ["persistence"] }
egui            = { version = "0.19.0", features = ["serde"] }
egui-notify     = "0.4.4"
egui_extras     = { version = "0.19.0", features = ["image"] }
flume           = { version = "0.10.14", default-features = false, features = ["async"] }
image           = { version = "0.24.5", default-features = false, features = ["png", "jpeg", "gif"] }
once_cell       = "1.16.0"
regex           = "1.7.0"
reqwest         = { version = "0.11.13", features = ["json"] }
serde           = { version = "1.0.147", features = ["derive"] }
serde_json      = "1.0.88"
simple_env_load = "0.2.0"
time            = { version = "0.3.17", features = ["macros", "formatting", "parsing", "local-offset"] }
tokio           = { version = "1.22.0", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
tokio-stream    = "0.1.11"

[patch.crates-io]
eframe      = { git = "https://github.com/museun/egui", branch = "museun" }
egui        = { git = "https://github.com/museun/egui", branch = "museun" }
egui_extras = { git = "https://github.com/museun/egui", branch = "museun" }

[profile.dev.package.eframe]
opt-level = 3

[profile.dev.package.egui]
opt-level = 3

[profile.dev.package.egui_extras]
opt-level = 3

[profile.dev.package.image]
opt-level = 3
